* Mon Aug 27 2007 Jesse Keating <jkeating@redhat.com>
- Set up arch in __init__.py as it's needed for logging

* Sun Aug 26 2007 Jesse Keating <jkeating@redhat.com>
- Add better support for %packages syntax using native pykickstart
- Add a cache dir for pungi (/var/cache/pungi) and a cli option to override
- Add root check.

* Sat Aug 25 2007 Jesse Keating <jkeating@redhat.com>
- Use a kickstart file as input now (for cdsize and package manifest)
- Turn pkglist into a pre-parsed package dictionary
- Arrange config setting logically
- Error out on usage if no config file passed
- Pass gather a ksparser object instead, needed for yum repos
  and more advanced package handling.
- Use ksparser to get repo(s) from kickstart config.
- Don't rely upon a yum conf, do all setup ourselves.

* Fri Aug 24 2007 Jesse Keating <jkeating@redhat.com>
- Remove a lot of configurable items and hard set them
- Move some items to cli flags only (part of moving to pykickstart)
- make "product_name" "name" instead.  KISS
- hard set product_path to 'Packages'
- Use group metadata from repos instead of our own comps file
- Get group files out of configured repos and create a mashup
  of the comps.  Filter it and make use of it when creating repos.
- Move _doRunCommand into pypungi/__init__.py so that it can be
  easily used by all modules.  Also pass in a logger for correct
  logging
- Quiet down creatrepo calls

* Thu Aug 23 2007 Jesse Keating <jkeating@redhat.com>
- Add a source config for the Fedora spin

* Tue Aug 21 2007 Jesse Keating <jkeating@redhat.com>
- Rework how source rpms are pulled in
  Always pull in 'src' arch packages, just filter them
  when not needed.  Saves having to reset or create new
  yum objects.

* Wed Aug 15 2007 Jesse Keating <jkeating@redhat.com>
- Create a base pungi class that sets logging
- Inherit this class in Gather and Pungi
- Adjust logging to make use of new facility, use right levels
- Drop a note when all done with composing
